--- a/layouts/_default/services/single.html
+++ b/layouts/_default/services/single.html
@@ -27,7 +27,7 @@
                     <li><strong>10-day delivery</strong></li>
                     <li>30 days of free support</li>
                 </ul>
-                <p><strong>Only $347</strong> <span class="price-note">(Limited to first 10 clients)</span></p>
+                <p><strong>Only $177</strong> <span class="price-note">(First 10 clients only, limited time offer)</span></p>
                 <a href="{{ "/contact/" | relURL }}" class="content-btn">Get My Starter Site</a>
             </div>
 
@@ -94,12 +94,9 @@
         <a href="{{ "/contact/" | relURL }}" class="btn-large btn-primary">Get Free Quote</a>
 
         <!-- Smart Call Button -->
-        <a href="tel:+61403872586"
-           class="btn-large btn-outline call-button"
-           id="callButton"
-           data-phone="+61403872586">
-           <span class="button-icon">📞</span>
-           Call Us Now
+        <a href="tel:+61403872586" class="btn-large btn-outline call-button" id="callButton" data-phone="+61403872586">
+            <span class="button-icon">📞</span>
+            Call Us Now
         </a>
     </div>
 </section>
