--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ADD GOOGLE VERIFICATION TAG HERE -->
@@ -77,3 +78,4 @@
 
 </body>
 </html>
+
